@@ -9514,10 +9514,6 @@ genSTM8iCode (iCode *ic)
       genIpush (ic);
       break;
 
-    case IPOP:
-      wassertl (0, "Unimplemented iCode");
-      break;
-
     case CALL:
     case PCALL:
       genCall (ic);
